footer logo changed

--- a/index.html
+++ b/index.html
@@ -1064,7 +1064,7 @@
                         <div class="footer-wrap d-flex flex-wrap w-100">
                             <div class="footer-about">
                                 <div class="logo d-block">
-                                    <a href="index.html" title="Home"><img class="img-fluid" src="assets/images/footer-logo.png" alt="Footer Logo"></a>
+                                    <a href="#intro" title="Home"><img class="img-fluid" src="assets/images/footer-logo.png" alt="Footer Logo"></a>
                                 </div><!-- Logo -->
                                 <p class="mb-0">We’re on a mission to build a better future where technology creates good jobs for everyone.</p>
                             </div><!-- Footer About -->
